# morphkatz

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json.example  CMakeUserPresets.json.example  CONTRIBUTING.md  NOTICE  Open-in-VS.cmd  README.md  RESPONSIBLE_USE.md  SECURITY.md  TELEMETRY.md  TRADEMARK.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  benchmarks.md  data-morph.md  evasion_bench.md  mimikatz-test.md  responsible-use.md  roadmap.md  rule-schema.md  scan.md
fuzz/: CMakeLists.txt  fuzz_rule_matcher.cpp
include/morphkatz/analysis/: binary_diff.hpp  flag_liveness.hpp  metrics.hpp
include/morphkatz/cli/: args.hpp  banner.hpp
include/morphkatz/common/: error.hpp  logging.hpp  version.hpp  wide.hpp
include/morphkatz/datapass/: atom.hpp  atom_discovery.hpp  decoder_stub.hpp  pass.hpp
include/morphkatz/disasm/: cfg.hpp  decoder.hpp
include/morphkatz/engine/: batch.hpp  compare.hpp  encoder.hpp  orchestrator.hpp  pad_policy.hpp  patcher.hpp  polymorph.hpp  rng.hpp
include/morphkatz/format/: pe_image.hpp  pe_reloc.hpp  pe_section_appender.hpp  pe_tls.hpp
include/morphkatz/ir/: flags_effect.hpp  instruction.hpp
include/morphkatz/report/: diff_report.hpp
include/morphkatz/rules/: rule.hpp  rule_loader.hpp  rule_matcher.hpp
include/morphkatz/scan/: bisect.hpp  defender_target.hpp  mpcmdrun_scanner.hpp  pe_scan_ranges.hpp  preconditions.hpp  scan_subcommand.hpp  scanner.hpp  threat_classify.hpp
include/morphkatz/verify/: re_disasm_check.hpp  unicorn_verify.hpp
include/morphkatz/yara/: yara_target.hpp
packaging/chocolatey/: morphkatz.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/scoop/: morphkatz.json
packaging/vs/: morphkatz.natvis
rules/yara/: README.md
scripts/: demo-amsi-bypass.ps1  first-build.ps1  open-in-vs.ps1
scripts/bench/: aggregate.py  eval.ps1  fetch_corpus.ps1  fetch_mimikatz.ps1  fetch_yara_pack.ps1  test_aggregate.py
src/: main.cpp
src/analysis/: binary_diff.cpp  flag_liveness.cpp  metrics.cpp
src/cli/: args.cpp
src/common/: error.cpp  logging.cpp  wide.cpp
src/datapass/: atom_discovery.cpp  decoder_stub.cpp  pass.cpp
src/disasm/: cfg.cpp  decoder.cpp
src/engine/: batch.cpp  compare.cpp  encoder.cpp  orchestrator.cpp  pad_policy.cpp  patcher.cpp  polymorph.cpp  rng.cpp
src/format/: pe_image.cpp  pe_reloc.cpp  pe_section_appender.cpp  pe_tls.cpp
src/ir/: flags_effect.cpp  instruction.cpp
src/report/: diff_report.cpp
src/rules/: rule_loader.cpp  rule_matcher.cpp
src/scan/: bisect.cpp  defender_target.cpp  mpcmdrun_scanner.cpp  pe_scan_ranges.cpp  preconditions.cpp  scan_subcommand.cpp  scanner.cpp  threat_classify.cpp
src/verify/: re_disasm_check.cpp  unicorn_verify.cpp
src/yara/: yara_target.cpp
tests/: CMakeLists.txt
tests/integration/: data_string_demo_test.cpp  targeted_byte_pairs_test.cpp
tests/samples/: amsi_demo_target.yar  amsi_patch_demo.cpp  build_amsi_demo.cmd  build_data_string_demo.cmd  data_string_demo.cpp  data_string_demo.target.yar
tests/unit/: atom_discovery_test.cpp  batch_test.cpp  binary_diff_test.cpp  bisect_test.cpp  cfg_test.cpp  cli_test.cpp  data_pass_test.cpp  decoder_stub_test.cpp  defender_target_test.cpp  eicar_smoke_test.cpp  error_test.cpp  flag_liveness_test.cpp  flags_effect_test.cpp  metrics_test.cpp  mpcmdrun_discovery_test.cpp  mpcmdrun_parse_test.cpp  orchestrator_test.cpp  pad_policy_test.cpp  patcher_test.cpp  pe_image_test.cpp  pe_reloc_test.cpp  pe_scan_ranges_test.cpp  pe_section_appender_test.cpp  pe_tls_test.cpp  polymorph_test.cpp  preconditions_test.cpp  report_test.cpp  rng_test.cpp  rule_loader_test.cpp  rule_matcher_test.cpp  smoke_test.cpp  threat_classify_test.cpp  wide_test.cpp  yara_target_test.cpp
